--- a/index.html
+++ b/index.html
@@ -2013,14 +2013,13 @@
                             btnOk.innerText = 'המשך';
                             btnOk.onclick = () => { close(); resolve(true); };
                         } else if (type === 'confirm') {
-                            title.innerText = "למחוק את המחלקה?";
-                            btnOk.innerText = 'כן, מחק';
+                            title.innerText = "בוטלי מבקש אישור:"; // כותרת כללית שמתאימה לכל מצב
+                            btnOk.innerText = 'אישור';             // כפתור ניטרלי
+                            btnCancel.innerText = 'ביטול';
+                            btnCancel.style.display = 'inline-block'; // מחזיר את כפתור הביטול כדי שהתלמיד יוכל להתחרט
 
-                            // הסרתי את הצגת כפתור הביטול - הוא נשאר מוסתר (display: none)
-                            // אבל משאירים את ה-onclick כדי שהאיקס (X) למעלה יעבוד
                             btnOk.onclick = () => { close(); resolve(true); };
                             btnCancel.onclick = () => { close(); resolve(false); };
-
                         } else if (type === 'prompt') {
                             title.innerText = "בוטלי צריך מידע:";
                             input.style.display = 'block';
